fixed media query to properly work on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ input[type=number]::-webkit-outer-spin-button {
 .ingredientInput{
    border: 1px solid #000000;
    border-radius: 10px;
-   height: 30px;
+   height: 45px;
    width: 120px;
    padding: 0px 16px;
    font-size: 16px;
@@ -28,7 +28,7 @@ input[type=number]::-webkit-outer-spin-button {
 
  .ingredientInput:focus{
     outline: none;
-    box-shadow: 0 0 0 1px #21326c;
+    /* box-shadow: 0 0 0 1px #21326c; */
  }
 
  .inputBox{
@@ -41,8 +41,8 @@ input[type=number]::-webkit-outer-spin-button {
    position: relative;
    right: 30px;
    top: 1px;
-   width: 30px;
-   height: 32px;
+   width: 40px;
+   height: 47px;
    border: solid 1px black;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
@@ -58,8 +58,8 @@ input[type=number]::-webkit-outer-spin-button {
    position: relative;
    left: 30px;
    top: 1px;
-   width: 30px;
-   height: 32px;
+   width: 40px;
+   height: 47px;
    border: solid 1px black;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
@@ -81,8 +81,7 @@ input[type=number]::-webkit-outer-spin-button {
  thead tr{
   position: absolute;
   display: flex;
-  gap: 100px;
-  text-decoration: underline;
+  gap: 60px;
  }
 
  .th{
@@ -95,7 +94,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 30px;
   margin-left: 10px;
   width: 85px;
-  height: 25px;
+  height: 30px;
   border-radius: 10px;
   border: 1px solid #000000;
   padding-left: 10px;
@@ -116,10 +115,9 @@ input[type=number]::-webkit-outer-spin-button {
   display: inline-block;
  }
 
- .label{
-  margin-left: 60px;
-  font-size: 16px;
-  margin-bottom: 70px;
+ .weightLabel{
+  font-weight: 700;
+  margin-left: 28%;
  }
 
  .percentage{
@@ -150,36 +148,41 @@ input[type=number]::-webkit-outer-spin-button {
   text-align: center;
  }
 
+ .tester{
+  margin-left: 48px;
+ }
+
+.inputParent{
+  position: relative;
+}
+
+.inputLabel, .equal{
+  display: none;
+}
+
  @media (max-width: 450px){
-  .ingredientInput{
-    width: 75px;
-  }
-
-  .minus, .plus{
-    width: 25px;
-  }
-
-  .minus{
-    left: 20px;
-  }
-
-  .plus{
-    right: 20px;
-  }
-
-  .percentage{
-    right: 60px;
-   }
-
    .main{
-    padding: 20px 30px 60px 30px;
+    padding: 20px 15px 60px 15px;
    }
 
-   thead tr{
-    gap: 70px;
+   .inputLabel{
+    display: block;
+    position: absolute;
+    font-size: 12px;
+    left: 75px;
+    top: -5px;
+    background: white;
+    padding: 0px 4px;
+    color: #21326c;
+  }
+
+   thead tr, .item{
+    display: none;
    }
 
-   .test{
-    margin-left: 10px;
-   }
+   .equal{
+    display: inline;
+    padding-right: 5px;
+    margin-left: -10px;
+  }
  }
